--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "middle",
   "version": "0.1.0",
   "private": true,
+  "compilerOptions": {
+    "moduleResolution": "node"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -49,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.9"
   }
 }
