--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/redux-thunk": "^2.1.0",
     "antd": "^4.18.3",
     "axios": "^0.25.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
